# openxr-latency-bench

./: CMakeLists.txt  README.md  application.cpp  application.h  main.cpp  noise.glsl  renderer.cpp  renderer.h
.github/workflows/: Build.yml
cmake/: CompileGLSL.cmake
utils/: handle.h  typename.h
vk/: check.h  error_category.cpp
xr/: actionset.cpp  actionset.h  check.h  error_category.cpp  instance.cpp  instance.h  session.cpp  session.h  space.h  swapchain.cpp  swapchain.h  system.cpp  system.h  xr.cpp  xr.h
xr/details/: enumerate.h
